implemented ENABLE_AZURE_OPENAI flag to select between OpenAI and Azure OpenAI

--- a/samples/python/agents/semantickernel/.envexample
+++ b/samples/python/agents/semantickernel/.envexample
@@ -1,9 +1,12 @@
-## OpenAI configurations - uncomment if using OpenAI
-# OPENAI_API_KEY="<example>"
-# OPENAI_CHAT_MODEL_ID="gpt-4.1"
-#
-#
-## Azure OpenAI configuration - uncomment if using Azure OpenAI
-# AZURE_OPENAI_ENDPOINT=""
-# AZURE_OPENAI_API_KEY=""
-# AZURE_OPENAI_API_VERSION=""
+# OpenAI configurations
+OPENAI_API_KEY="<example>"
+OPENAI_CHAT_MODEL_ID="gpt-4o"
+# Optional: Custom endpoint (leave empty for OpenAI's default endpoint)
+OPENAI_ENDPOINT=""
+
+# Azure OpenAI configuration (defaults to Azure OpenAI)
+ENABLE_AZURE_OPENAI="true"
+AZURE_OPENAI_API_KEY="your_azure_api_key_here"
+AZURE_OPENAI_ENDPOINT="<https://your-resource.openai.azure.com/>"
+AZURE_OPENAI_DEPLOYMENT_NAME="your-deployment-name"
+AZURE_OPENAI_API_VERSION="2024-12-01-preview"  # Set to your desired API version
